--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="cn.catmovie.catmovie2.MainActivity">
-    <com.qmuiteam.qmui.widget.QMUIViewPager
+    <cn.catmovie.catmovie2.view.NoScrollViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
