--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <com.qmuiteam.qmui.widget.webview.QMUIWebView
+    <cn.catmovie.catmovie2.view.X5WebView
         android:id="@+id/wv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
