--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,9 @@
         <item name="android:background">#efefef</item>
     </style>
 
+    <style name="view_divider_vertical">
+        <item name="android:layout_width">0.5dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">#efefef</item>
+    </style>
 </resources>
