tab 和直播部分

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="cn.catmovie.catmovie2.MainActivity">
-    <com.qmuiteam.qmui.widget.QMUIViewPager
-        android:id="@+id/viewpager"
+    <FrameLayout
+        android:id="@+id/fl"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/qmui_config_color_red"
+        android:layout_height="wrap_content"
         android:layout_weight="1"/>
-    <com.qmuiteam.qmui.widget.QMUITabSegment
-        android:id="@+id/tab"
-        android:background="@color/qmui_config_color_gray_1"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="45dp"/>
+        android:layout_height="1dp"
+        android:background="@color/divider_line"/>
+    <android.support.v4.app.FragmentTabHost
+        android:id="@+id/tab"
+        android:background="@color/qmui_config_color_white"
+        android:layout_width="match_parent"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_height="wrap_content"/>
 
 
 </com.qmuiteam.qmui.layout.QMUILinearLayout>
