tab 和直播部分

--- a/app/src/main/res/layout/layout_chanel.xml
+++ b/app/src/main/res/layout/layout_chanel.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.qmuiteam.qmui.layout.QMUILinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:orientation="vertical"
     android:gravity="center"
     android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/iv_img"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:src="@mipmap/ic_launcher"/>
     <TextView
         android:id="@+id/tv_tab"
         android:textColor="@color/selector_tab_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:textSize="12sp"
+        android:text="11111111"
+        android:gravity="center"
         android:layout_height="wrap_content" />
 </com.qmuiteam.qmui.layout.QMUILinearLayout>
